; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_sony-laptop.c_sony_laptop_remove_input.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_sony-laptop.c_sony_laptop_remove_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32*, i32*, i32 }

@sony_laptop_input = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sony_laptop_remove_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sony_laptop_remove_input() #0 {
  %1 = call i32 @atomic_dec_and_test(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 4))
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %19

4:                                                ; preds = %0
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 1), align 4
  %6 = call i32 @flush_workqueue(i32 %5)
  %7 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 3), align 8
  %8 = call i32 @input_unregister_device(i32* %7)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 3), align 8
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 2), align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %4
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 2), align 8
  %13 = call i32 @input_unregister_device(i32* %12)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 2), align 8
  br label %14

14:                                               ; preds = %11, %4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 1), align 4
  %16 = call i32 @destroy_workqueue(i32 %15)
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sony_laptop_input, i32 0, i32 0), align 8
  %18 = call i32 @kfifo_free(i32 %17)
  br label %19

19:                                               ; preds = %14, %3
  ret void
}

declare dso_local i32 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @flush_workqueue(i32) #1

declare dso_local i32 @input_unregister_device(i32*) #1

declare dso_local i32 @destroy_workqueue(i32) #1

declare dso_local i32 @kfifo_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
